hphp/hack/test/typecheck/nonnull/switch_on_nonnull.php.exp
ERROR: File "switch_on_nonnull.php", line 4, characters 3-74:
This `switch` case cannot be checked for exhaustivity. Please provide a default. Without a default, when none of the cases match, a runtime exception will be thrown. (Typing[4489])
  File "switch_on_nonnull.php", line 4, characters 11-12:
  The scrutinee has type `nonnull` which is not an enum, enum class, enum class label, null, or nullable or tuples of those types.
