hphp/hack/test/typecheck/nonnull/switch_on_nonnull.php
<?hh

function f(nonnull $x): void {
  switch ($x) {
    case 42:
      break;
    case 'foo':
      break;
  }
}
